# firefox-ppc64

./: eslint-file-globals.config.mjs
.cargo/: config.toml.in
accessible/base/: nsAccessibilityService.cpp
accessible/ipc/: RemoteAccessible.cpp  RemoteAccessible.h
accessible/mac/: MOXAccessibleProtocol.h  mozAccessible.h  mozAccessible.mm
browser/actors/: UrlbarParent.sys.mjs
browser/components/: BrowserGlue.sys.mjs  ProfileDataUpgrader.sys.mjs  StartupTelemetry.sys.mjs
browser/components/shell/rust/shell_windows/: Cargo.toml
browser/components/shell/rust/shell_windows/src/: WindowsShellServiceRust.h  lib.rs  limited_access_features.rs  secondary_tiles.rs
browser/components/shell/rust/shell_windows/src/taskbar/: com.rs  mod.rs  winrt.rs
browser/components/shell/rust/shell_windows/src/util/: async_timer.rs  mod.rs  thread.rs
browser/locales/: l10n-changesets.json
config/: check_macroassembler_style.py
docs/jsloader/: index.md  jsloader-api.md  system-modules.md
docs/overview/: gecko.md  index.md  ios.md
dom/base/: Selection.cpp  TimeoutManager.cpp  nsContentUtils.cpp  nsINode.cpp
dom/canvas/: CanvasRenderingContext2D.cpp  DrawTargetWebgl.cpp  WebGLShaderValidator.cpp  WebGLTextureUpload.cpp
dom/events/: EventStateManager.cpp  IMEContentObserver.cpp
dom/html/: HTMLCanvasElement.cpp  nsGenericHTMLElement.cpp
dom/media/: MediaFormatReader.cpp
dom/promise/: Promise.cpp  Promise.h
dom/reporting/: ReportingUtils.cpp  (+1 more)
gradle/: libs.versions.toml
js/: moz.configure
mfbt/: Assertions.h  Result.h  Variant.h
widget/: nsBaseDragService.cpp
(+606 files in other folders)
